tests/test_assets/semantic/invalid/raw_pointers/pointer_ordering.cog
test_pointer_ordering::(
    left: i32*,
    right: i32*
) -> void {
    left < right;
}
